# zmk-corne6

./: .gitignore  .pdm-python  Makefile  README.md  build.yaml  corne_arrow_keys_as_mouse.json  image_generator.py  pyproject.toml  viewer.py
boards/shields/corne_tp/: corne_tp_right.overlay
config/: behaviours_homerow_mods.dtsi  corne.conf  corne.keymap  timeless.h  west.yml
