[project]
name = "zmq-corne6"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "egradman", email = "eric@gradman.com"},
]
dependencies = [
    "pyparsing>=3.1.2",
    "keymap-drawer>=0.18.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
